# tauri-app

./: package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/auth/: login_user.rs  mod.rs  renew_token.rs
src-tauri/src/application/perfiles/: create_perfil.rs  get_all_perfiles.rs  mod.rs
src-tauri/src/application/users/: create_user.rs  get_user.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/auth/: response.rs
src-tauri/src/domain/perfiles/: entity.rs  repository.rs
src-tauri/src/domain/services/: mod.rs  password_service.rs  token_service.rs
src-tauri/src/domain/users/: entity.rs  repository.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/database/: mod.rs  sqlite_perfil_repository.rs  sqlite_user_repository.rs
src-tauri/src/infrastructure/security/: bcrypt_service.rs  jwt_service.rs  mod.rs
src-tauri/src/presentation/: auth_controller.rs  guards.rs  mod.rs  perfiles_controller.rs  users_controller.rs
src/application/auth/: LoginUseCase.test.ts  LoginUseCase.ts  index.ts  (+1 more)
src/context/: ThemeContext.tsx
src/hooks/: useAuth.test.tsx  useAuth.ts  useTicket.ts  useTicketCategory.ts
src/icons/: index.ts
src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
src/services/: authService.test.ts  authService.ts  ticketCategoryService.ts  ticketService.ts
src/store/: index.ts
src/utils/: alerts.ts  formatetDate.ts  formatters.ts  getSubdomain.tsx
(+101 files in other folders)
