[package]
name = "LaboratorioPiedad"
version = "1.0.0"
description = "Laboratorio Piedad"
authors = ["Josue Perez Eulogio"]
edition = "2021"
default-run = "LaboratorioPiedad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
rusqlite = { version = "0.40.0", features = ["bundled"] }
bcrypt = "0.19.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
directories = "5.0"
